fixing icon z-index

--- a/src/style/blocks/forecast/__favorite-btn-icon/__favorite-btn-icon.css
+++ b/src/style/blocks/forecast/__favorite-btn-icon/__favorite-btn-icon.css
@@ -1,6 +1,8 @@
 .forecast__favorite-btn-icon {
   font-size: 2rem;
   opacity: 0.7;
+  z-index: 0;
+
 }
 
 .forecast__favorite-btn-icon:hover {
